--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -28,4 +28,22 @@
     <color name="app_network_error_text">#999999</color>
     <color name="app_text_coler">#999999</color>
     //  ----------------------------- 框架参数-end-------------------------------
-  </resources>
+
+//    时间选择器
+    <color name="app_zhexian_blue">#1e70ea</color>
+    <color name="app_white">#FFFFFF</color>
+    <color name="text_color_defult">#FF333333</color>
+    //    时间选择器   end
+
+    //
+    <color name="pickerview_bgColor_default">#FFFFFFFF</color>
+    <color name="pickerview_bgColor_overlay">#60000000</color>
+    <color name="pickerview_bg_topbar">#f5f5f5</color>
+    <color name="pickerview_timebtn_nor">#057dff</color>
+    <color name="pickerview_timebtn_pre">#c2daf5</color>
+    <color name="pickerview_topbar_title">#000000</color>
+    <color name="pickerview_wheelview_textcolor_center">#2a2a2a</color>
+    <color name="pickerview_wheelview_textcolor_divider">#d5d5d5</color>
+    <color name="pickerview_wheelview_textcolor_out">#a8a8a8</color>
+
+</resources>
